# amr-fleet-manager

./: .env.example  Makefile  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONFIG.md  DB_SCHEMA.md  DEMO.md  EVENTS.md  OPTIMIZER.md  RUNBOOK.md  ros-commands.md
infra/db/: init.sql
infra/db/migrations/: 001_add_mini_scale.sql  002_add_run_size_overrides.sql  003_add_run_stopped_status.sql
ros2/robot_agents/: Dockerfile  entrypoint.sh
ros2/robot_agents/src/robot_agents/: package.xml  setup.cfg  setup.py
ros2/robot_agents/src/robot_agents/resource/: robot_agents
ros2/robot_agents/src/robot_agents/robot_agents/: __init__.py  agents_node.py  settings.py
services/dispatcher-worker-py/: Dockerfile  requirements.txt
services/dispatcher-worker-py/app/: __init__.py  baseline.py  db.py  main.py  mq.py  planner_client.py  settings.py
services/dispatcher-worker-py/app/tests/: test_baseline.py
services/fleet-api-go/: Dockerfile  go.mod  go.sum  openapi.yaml
services/fleet-api-go/cmd/server/: main.go
services/fleet-api-go/internal/config/: config.go
services/fleet-api-go/internal/db/: db.go
services/fleet-api-go/internal/handlers/: handlers.go
services/optimizer-service-py/: requirements.txt
services/optimizer-service-py/app/: __init__.py  main.py  schemas.py  settings.py
services/sim-runner-py/: requirements.txt
services/sim-runner-py/app/: __init__.py  db.py  main.py  mq.py  settings.py
services/viewer-service-py/: requirements.txt
services/viewer-service-py/app/: __init__.py  main.py  mq_consumer.py  settings.py  ws.py
(+19 files in other folders)
