<?xml version="1.0"?>
<package format="3">
  <name>robot_agents</name>
  <version>0.1.0</version>
  <description>AMR robot telemetry bridge</description>
  <maintainer email="demo@example.com">amr-demo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
